--- a/web_client/package.json
+++ b/web_client/package.json
@@ -50,6 +50,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "phoenix-socket": "^1.1.3",
+    "ramda": "^0.24.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
