--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,5 @@
 version: '3.1'
 services:
-  market:
-    build: ./market
-    ports:
-      - "5000:5000"
-    volumes:
-      - ./market:/code
-    command: bash atfeed-httpserver/bin/init.sh
-    environment:
-      CLIENT_PORT: 5000
-      SERVER_HOST: activetick1.activetick.com
-      API_KEY: ${API_KEY}
-      AT_USER_ID: ${AT_USER_ID}
-      AT_PASSWORD: ${AT_PASSWORD}
-
   web_server:
     build: ./web_server
     ports:
@@ -23,8 +9,9 @@ services:
     depends_on:
       - db
       - market_mock
-      - kafka
     command: mix phoenix.server
+    environment:
+      MARKET_URL: ${MARKET_URL}
 
   db:
     image: postgres
