--- a/web_client/package.json
+++ b/web_client/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "moment": "^2.18.1",
     "phoenix-socket": "^1.1.3",
     "ramda": "^0.24.1",
     "react": "^15.4.2",
