stream based on current tickers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     command: mix phoenix.server
     environment:
       MARKET_URL: ${MARKET_URL}
+      MARKET_STREAM_URL: ${MARKET_STREAM_URL}
 
   db:
     image: postgres
