--- a/web_client/package.json
+++ b/web_client/package.json
@@ -49,14 +49,17 @@
   },
   "dependencies": {
     "axios": "^0.15.3",
+    "classnames": "^2.2.5",
     "moment": "^2.18.1",
+    "node-sass": "^4.5.3",
     "phoenix-socket": "^1.1.3",
     "ramda": "^0.24.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6"
   },
   "scripts": {
     "start": "node scripts/start.js",
